Fix node without expander alignment in visibility tree

--- a/packages/itwin/tree-widget/src/components/trees/VisibilityTreeBase.scss
+++ b/packages/itwin/tree-widget/src/components/trees/VisibilityTreeBase.scss
@@ -74,6 +74,12 @@
           }
         }
       }
+
+      .without-expander {
+        .visibility-tree-checkbox-container + * {
+          margin-left: $exploded-node-expander-additional-padding;
+        }
+      }
     }
   }
 }
